--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
                         <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
-                        <p class="mb-0">Somos una inmobiliaria comprometida envés ayudarte a encontrar el hogar de tus
+                        <p class="mb-0">Somos una inmobiliaria comprometida en ayudarte a encontrar el hogar de tus
                             sueños. Ofrecemos asesoramiento personalizado y un amplio catálogo de propiedades.</p>
                     </div>
                 </div>
