--- a/nosotros.html
+++ b/nosotros.html
@@ -399,10 +399,8 @@
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
                         <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
-                        <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
-                            sueños. Ofrecemos
-                            asesoramiento personalizado y un amplio catálogo de propiedades.</p>
-
+                        <p class="mb-0">Somos una inmobiliaria comprometida en ayudarte a encontrar el hogar de tus
+                            sueños. Ofrecemos asesoramiento personalizado y un amplio catálogo de propiedades.</p>
                     </div>
                 </div>
                 <!-- Contact Section -->
@@ -416,7 +414,7 @@
                             info@unengroup.com.ar</a></p>
                     <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i
+                        <a href="https://www.instagram.com/unengroup/" class="text-light me-2"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
                                 class="fab fa-instagram"></i></a>
@@ -437,7 +435,7 @@
                             sujetos a modificación sin previo aviso, como así también su disponibilidad.</small>
                     </p>
                     <p><small>Constanza Garcia Gomez CPI <img src="./images/logoCPI.jpg" alt="logo CPI Córdoba"
-                        style="border-radius: 50%; width: 50px;"> 7873.</small></p>
+                                style="border-radius: 50%; width: 50px;"> 7873.</small></p>
                     <p class="mb-0 text-center">&copy; 2025 <a class="linkSenestrariDev"
                             href="https://senestraridev.com/">Senestrari
                             Dev.</a> Todos los derechos reservados.</p>
