--- a/propiedades.html
+++ b/propiedades.html
@@ -236,56 +236,57 @@
 
   <footer class="text-light pt-5 pb-3">
     <div class="container">
-      <div class="row">
-        <!-- About Section -->
-        <div class="col-md-8">
-          <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
-          <div class="d-flex align-items-center" id="espacioFotoMobile">
-            <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
-              style="max-width: 150px; border-radius:50%;">
-            <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
-              sueños. Ofrecemos
-              asesoramiento personalizado y un amplio catálogo de propiedades.</p>
+        <div class="row">
+            <!-- About Section -->
+            <div class="col-md-8">
+                <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
+                <div class="d-flex align-items-center" id="espacioFotoMobile">
+                    <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
+                        style="max-width: 150px; border-radius:50%;">
+                    <p class="mb-0">Somos una inmobiliaria comprometida en ayudarte a encontrar el hogar de tus
+                        sueños. Ofrecemos asesoramiento personalizado y un amplio catálogo de propiedades.</p>
+                </div>
+            </div>
+            <!-- Contact Section -->
+            <div class="col-md-4">
+                <h5 class="text-uppercase mb-3">Contacto</h5>
+                <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono:
+                        +54
+                        9 351 6837691
+                </p></a>
+                <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
+                        info@unengroup.com.ar</a></p>
+                <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/unengroup/" class="text-light me-2"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
+                            class="fab fa-instagram"></i></a>
+                </div>
 
-          </div>
+            </div>
         </div>
-        <!-- Contact Section -->
-        <div class="col-md-4">
-          <h5 class="text-uppercase mb-3">Contacto</h5>
-          <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono:
-              +54
-              9 351 6837691
-          </p></a>
-          <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
-              info@unengroup.com.ar</a></p>
-          <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
-          <div class="social-icons">
-            <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i class="fab fa-instagram"></i></a>
-          </div>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col text-start">
+                <p>
+                    <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información
+                        detallada es exclusiva de Unen Group Real Estate y es
+                        susceptible a modificación sin previo aviso. Todas las medidas enunciadas son meramente
+                        orientativas, las medidas exactas serán las que se expresen en el respectivo título de
+                        propiedad de cada inmueble. Todas las fotos, imágenes y videos son meramente ilustrativos,
+                        referenciales y no contractuales. Los precios enunciados son meramente orientativos y están
+                        sujetos a modificación sin previo aviso, como así también su disponibilidad.</small>
+                </p>
+                <p><small>Constanza Garcia Gomez CPI <img src="./images/logoCPI.jpg" alt="logo CPI Córdoba"
+                            style="border-radius: 50%; width: 50px;"> 7873.</small></p>
+                <p class="mb-0 text-center">&copy; 2025 <a class="linkSenestrariDev"
+                        href="https://senestraridev.com/">Senestrari
+                        Dev.</a> Todos los derechos reservados.</p>
+            </div>
         </div>
-      </div>
-      <hr class="my-4">
-      <div class="row">
-        <div class="col text-start">
-          <p>
-            <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información
-              detallada es exclusiva de Unen Group Real Estate y es
-              susceptible a modificación sin previo aviso. Todas las medidas enunciadas son meramente
-              orientativas, las medidas exactas serán las que se expresen en el respectivo título de
-              propiedad de cada inmueble. Todas las fotos, imágenes y videos son meramente ilustrativos,
-              referenciales y no contractuales. Los precios enunciados son meramente orientativos y están
-              sujetos a modificación sin previo aviso, como así también su disponibilidad.</small>
-          </p>
-          <p><small>Constanza Garcia Gomez CPI <img src="./images/logoCPI.jpg" alt="logo CPI Córdoba"
-            style="border-radius: 50%; width: 50px;"> 7873.</small></p>
-          <p class="mb-0 text-center">&copy; 2025 <a class="linkSenestrariDev"
-              href="https://senestraridev.com/">Senestrari
-              Dev.</a> Todos los derechos reservados.</p>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
   <!-- Botón de WhatsApp -->
   <a href="https://wa.me/5493516837691" class="whatsapp-button" target="_blank" aria-label="Chat en WhatsApp">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
