--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="icon" href="./images/faviCon.jpg" type="image/x-icon">
 
     <!-- CSS Frameworks y Librerías -->
+
+    <!-- Google Recaptcha  -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Pannellum  -->
@@ -846,8 +851,8 @@
 
                 <div class="row">
                     <!-- Formulario de Contacto -->
-                    <div class="col-md-6  animate__animated animate__fadeInLeft">
-                        <form id="contacto" action="/enviar-mensaje" method="POST"
+                    <div class="col-md-6 animate__animated animate__fadeInLeft">
+                        <form id="contacto" action="/php/formServicios.php" method="POST"
                             class="bg-white mismoHeight p-4 rounded shadow">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
@@ -876,9 +881,17 @@
                                 <textarea id="mensaje" name="mensaje" class="form-control" rows="4"
                                     placeholder="Escribí tu mensaje" required></textarea>
                             </div>
+                            <!-- reCAPTCHA -->
+                            <div class="g-recaptcha mb-3" data-sitekey="6LduadcqAAAAAMAPmj2iEoWSjgfKXKH3FAnT3D1f"></div>
+
                             <button type="submit" class="btn btn-warning w-100 fw-bold">Enviar mensaje</button>
                         </form>
 
+                        <!-- Mensajes de éxito y error -->
+                        <div id="mensajeExito" class="alert alert-success mt-3" style="display: none;">✅ ¡Mensaje
+                            enviado con éxito! Nos contactaremos pronto.</div>
+                        <div id="mensajeError" class="alert alert-danger mt-3" style="display: none;">❌ Hubo un error al
+                            enviar tu mensaje. Inténtalo nuevamente.</div>
                     </div>
 
                     <!-- Redes Sociales -->
@@ -987,6 +1000,7 @@
     <script src="./js/scriptNavbarFixed.js"></script>
     <script src="./js/scriptHome.js"></script>
     <script src="./js/scriptHomeDestacados.js"></script>
+    <script src="./js/formularios/formServicios.js"></script>
 </body>
 
 </html>
