formulario listo falta formProp

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <!-- CSS Frameworks y Librerías -->
 
     <!-- Google Recaptcha  -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+
 
 
     <!-- Bootstrap -->
@@ -852,7 +854,7 @@
                 <div class="row">
                     <!-- Formulario de Contacto -->
                     <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <form id="contacto" action="/php/formServicios.php" method="POST"
+                        <form id="formContacto"
                             class="bg-white mismoHeight p-4 rounded shadow">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
