--- a/nosotros.html
+++ b/nosotros.html
@@ -2,25 +2,42 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSES4S50PT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-LSES4S50PT');
+    </script>
+
+
     <!-- Meta Básico -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Meta SEO -->
-    <title>UnenGroup | Nosotros</title>
-    <!-- <meta name="description" content="Descripción breve y precisa para buscadores.">
-    <meta name="keywords" content="palabras clave, separadas, por, comas">
-    <meta name="author" content="Tu Nombre o Empresa">
-    <meta name="robots" content="index, follow"> -->
+    <title>Sobre UnenGroup | Inmobiliaria en Córdoba</title>
+    <meta name="description"
+        content="En UnenGroup combinamos experiencia, innovación y compromiso para ayudarte a encontrar la propiedad ideal. Conocé nuestra misión, visión y valores.">
+    <meta name="keywords"
+        content="inmobiliaria en Córdoba, agencia inmobiliaria, bienes raíces, UnenGroup, inversión inmobiliaria, confianza, asesoramiento inmobiliario">
+    <meta name="author" content="UnenGroup">
+    <meta name="robots" content="index, follow">
 
-    <!-- Meta Redes Sociales (Open Graph y Twitter Cards) -->
-    <!-- <meta property="og:title" content="Nombre de tu Sitio | Título de la Página">
-    <meta property="og:description" content="Descripción atractiva para compartir en redes sociales.">
-    <meta property="og:image" content="URL_de_la_imagen_destacada">
-    <meta property="og:url" content="https://tusitioweb.com">
+    <!-- Open Graph (para redes sociales) -->
+    <meta property="og:title" content="Sobre UnenGroup | Inmobiliaria en Córdoba">
+    <meta property="og:description"
+        content="Somos más que una inmobiliaria, somos tu socio en bienes raíces. Descubre nuestra historia y valores.">
+    <meta property="og:image" content="https://unengroup.com.ar/images/faviCon.jpg">
+    <meta property="og:url" content="https://unengroup.com.ar/nosotros.html">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image"> -->
+    <meta name="twitter:card" content="summary_large_image">
+
+
 
     <!-- Icono del Sitio -->
     <link rel="icon" href="./images/faviCon.jpg" type="image/x-icon">
@@ -93,7 +110,8 @@
                                     <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
+                                    <a class="dropdown-item"
+                                        href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
                                         |
                                         Oficinas | Cocheras</a>
                                 </li>
@@ -109,7 +127,7 @@
                             <a class="nav-link" href="#secContactoNosotros">Contacto</a>
                         </li>
                     </ul>
-      
+
                 </div>
             </div>
         </nav>
